# blink

./: CMakeLists.txt  Kconfig  README.md  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
.github/: copilot-instructions.md
main/: CMakeLists.txt  Kconfig.projbuild  UMSeriesD.cpp  UMSeriesD.h  UMSeriesD_idf.c  UMSeriesD_idf.h  blink_example_main.cpp
main/examples/: battery_check.cpp  blink_example_main.cpp  colorwheel.cpp
main/src/: UMSeriesD.cpp  UMSeriesD.h  UMSeriesD_idf.c  UMSeriesD_idf.h
